updatedAI
